# shogi

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  enable-threads.js  shogi-mt.js  shogi-mt.wasm  shogi-st.js  shogi-st.wasm  tutorial.html
cmake/: mingw-w64.cmake
docs/: shogi-mcts.md
docs/tutorial/: tutorial.md
src/: board.cpp  board.hpp  engine.cpp  engine.h  engine.hpp  font.hpp  glyphs.hpp  icon.hpp  main.cpp  mate.cpp  mate.hpp  mcts.cpp  mcts.h  mcts.hpp  shogi.icns  shogi.rc  shogi.rc.in  ui.cpp  ui.hpp
test/: abprev.cpp  eval_test.cpp  mate_test.cpp  perft.cpp  selfplay.cpp  tactics.cpp  tune.cpp  tune_eval.cpp
test/baseline/: board.cpp  board.hpp  engine.cpp  engine.hpp  mcts.cpp  mcts.hpp
tools/: genfont.cpp  genhtml.cpp  genicon.cpp  gentut.cpp
web/: build.sh  enable-threads.js  index.html  manifest.json  shell.html
